View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029948 | Open CASCADE | OCCT:Modeling Algorithms | public | 2018-07-11 17:28 | 2018-07-14 12:41 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029948: Uninitialized variable in GeomEvaluator_OffsetSurface::CalculateD0(...) method | ||||
Description | In the considered test case, all derivatives (in V-direction) of the surface to offset are equal to 0 in some specified point. In this case, the variable CSLib_NormalStatus NStatus in the method GeomEvaluator_OffsetSurface::CalculateD0(...) is not initialized. | ||||
Steps To Reproduce | test bugs modalg_7 bug28131 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR29948 has been created by nbv. SHA-1: 88cce092f2ff6433c3d42f2e58c8a363e75b41ca Detailed log of new commits: Author: nbv Date: Wed Jul 11 17:29:54 2018 +0300 0029948: Uninitialized variable in GeomEvaluator_OffsetSurface::CalculateD0(...) method Now the variable "NStatus" is initialized. |
|
Dear Bugmaster, The fix has been tested on Jenkins-11. Test results are OK (http://jenkins-test-11.nnov.opencascade.com/view/CR29948-master_NBV/). Could you check it on Jenkins-12? |
|
Nikolay, I do not agree with such fix. The method CSLib::Normal does not properly set the output parameter. You have made a workaround for one particular usage of this method. It is needed to fix the method itself rather than fix its output in all places where it is used. |
|
I have no objections. But I would like to know, does this fix solve the problem. |
|
Fix correct problem of bugs/modalg_7/bug28131 http://occt-tests/JT-12-WEEK38-OCCT/Debian80-64/summary.html |
|
Branch CR29948 has been updated forcibly by nbv. SHA-1: 5a2ef12c0dcb00cb853118c931a0b60b6a51a4ea |
|
Dear Mikhail, Please review the current state of CR29948 branch. Test results are here: http://jenkins-test-11.nnov.opencascade.com/view/CR29948-master_NBV/ |
|
Reviewed. |
|
Combination - OCCT branch : CR29948 SHA - 5a2ef12c0dcb00cb853118c931a0b60b6a51a4ea Products branch : master SHA - 49c228d5213fed6561994d0148827917539e38c8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 17129.410000000044 / 17169.739999999776 [-0.23%] Products Total CPU difference: 7471.890000000018 / 7501.920000000043 [-0.40%] Windows-64-VC10: OCCT Total CPU difference: 16948.26064199857 / 16852.39802749857 [+0.57%] Products Total CPU difference: 8308.59765989988 / 8212.11104139987 [+1.17%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29948 has been deleted by inv. SHA-1: 5a2ef12c0dcb00cb853118c931a0b60b6a51a4ea |
occt: master 73e403b8 2018-07-11 14:29:54
Committer: bugmaster Details Diff |
0029948: Uninitialized variable in GeomEvaluator_OffsetSurface::CalculateD0(...) method Variable "NStatus" from GeomEvaluator_OffsetSurface class is now initialized correctly. |
Affected Issues 0029948 |
|
mod - src/GeomEvaluator/GeomEvaluator_OffsetSurface.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-07-11 17:28 |
|
New Issue | |
2018-07-11 17:28 |
|
Assigned To | => msv |
2018-07-11 17:28 |
|
Relationship added | child of 0029910 |
2018-07-11 17:29 |
|
Assigned To | msv => nbv |
2018-07-11 17:29 |
|
Status | new => assigned |
2018-07-11 17:31 | git | Note Added: 0077460 | |
2018-07-12 09:35 |
|
Note Added: 0077486 | |
2018-07-12 09:35 |
|
Assigned To | nbv => bugmaster |
2018-07-12 09:35 |
|
Status | assigned => feedback |
2018-07-12 09:47 | msv | Note Added: 0077487 | |
2018-07-12 09:47 | msv | Note Edited: 0077487 | |
2018-07-12 09:48 | msv | Assigned To | bugmaster => nbv |
2018-07-12 09:48 | msv | Status | feedback => assigned |
2018-07-12 09:50 |
|
Note Added: 0077489 | |
2018-07-12 09:51 |
|
Assigned To | nbv => bugmaster |
2018-07-12 09:51 |
|
Status | assigned => feedback |
2018-07-12 12:22 | bugmaster | Note Added: 0077509 | |
2018-07-12 12:22 | bugmaster | Assigned To | bugmaster => nbv |
2018-07-12 12:22 | bugmaster | Status | feedback => assigned |
2018-07-12 13:08 | git | Note Added: 0077517 | |
2018-07-12 16:36 |
|
Note Added: 0077537 | |
2018-07-12 16:36 |
|
Assigned To | nbv => msv |
2018-07-12 16:36 |
|
Status | assigned => resolved |
2018-07-12 17:15 | msv | Note Added: 0077540 | |
2018-07-12 17:15 | msv | Assigned To | msv => bugmaster |
2018-07-12 17:15 | msv | Status | resolved => reviewed |
2018-07-12 18:37 | bugmaster | Status | reviewed => tested |
2018-07-12 18:38 | bugmaster | Note Added: 0077554 | |
2018-07-12 18:38 | bugmaster | Test case number | => Not needed |
2018-07-14 12:26 | bugmaster | Changeset attached | => occt master 73e403b8 |
2018-07-14 12:26 | bugmaster | Status | tested => verified |
2018-07-14 12:26 | bugmaster | Resolution | open => fixed |
2018-07-14 12:41 | git | Note Added: 0077604 |