0029948: Uninitialized variable in GeomEvaluator_OffsetSurface::CalculateD0(...) method

Variable "NStatus" from GeomEvaluator_OffsetSurface class is now initialized correctly.